<resources>
    <string name="app_name">MyCarManager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="oppure">oppure</string>
    <string name="google_sign_in">Accedi con Google</string>
    <string name="registrati">Non hai un account? Registrati</string>
    <string name="username">Username</string>
    <string name="data_nascita" >Data di nascita</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="esci">Esci</string>
    <string name="dati">Dati</string>
    <string name="modifica">Modifica</string>
    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="i_tuoi_veicoli">I tuoi veicoli</string>
    <string name="dettagli">Dettagli</string>
    <string name="costo">Costo</string>
    <string name="chilometraggio">Chilometraggio:</string>
    <string name="stato">"Stato: "</string>
    <string name="potenza">Potenza:</string>
    <string name="identificativo_veicolo">identificativo veicolo:</string>
    <string name="libbretto">Libbretto:</string>
    <string name="alimentazione">Alimentazione:</string>
    <string name="cilindrata">Cilindrata:</string>
    <string name="data_immatricolazione">Data immatricolazione:</string>
    <string name="targa">Targa:</string>
    <string name="modello">Modello:</string>
    <string name="marca">Marca:</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="documento">Documento</string>
    <string name="scadute">Scadute</string>
    <string name="imminenti">imminenti</string>
    <string name="data_pagamento">Data Pagamento</string>
    <string name="data_scadenza">Data Scadenza</string>
    <string name="spese">Spese</string>
    <string name="scadenze">Scadenze</string>
</resources>