<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clProfiloUtente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blu"
    >

    <!-- Header con Logo -->
    <LinearLayout
        android:id="@+id/llheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="256dp"
            android:layout_height="216dp"
            android:adjustViewBounds="true"
            android:src="@drawable/iconaloginregistrazione" />

    </LinearLayout>

    <!-- Contenitore Bianco Arrotondato (MaterialCardView) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/Bianco"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/llheader">


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- LogIn-->
            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColorHint="@color/Blu"
                app:boxStrokeColor="@color/Blu"
                app:hintTextColor="@color/Blu"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/Blu"
                    android:textColorHint="@color/Blu"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- PASSWORD -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColorHint="@color/Blu"
                app:boxStrokeColor="@color/Blu"
                app:hintTextColor="@color/Blu"
                app:passwordToggleTint="@color/Blu"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/Blu"
                    android:textColorHint="@color/Blu"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAccedi"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/Blu"
                android:text="@string/accedi"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="25dp" />

            <TextView
                android:id="@+id/tvUsernameUtente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/oppure"
                android:textColor="@color/Blu_intenso"
                android:textStyle="bold" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/google_sign_in"
                android:textAllCaps="false"
                app:icon="@drawable/ic_google"
                app:iconTint="@null"
                android:textColor="@color/Blu"
                android:textSize="18sp"
                app:cornerRadius="25dp"
                app:strokeColor="@color/Blu"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tvRegistrati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/registrati"
                android:textColor="@color/Blu_intenso"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>