<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clProfiloUtente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bianco">

    <!--includo l'header-->
    <include
        android:id="@+id/headerProfiloUtente"
        layout="@layout/item_headerblu" />

    <!--Bottone Logout-->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Bianco"
        android:gravity="center"
        android:text="@string/esci"
        android:textColor="@color/Rosso"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_logout"
        app:iconTint="@color/Rosso"
        app:iconSize="30dp"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintTop_toBottomOf="@+id/cvDatiUtente"
        app:strokeColor="@color/Rosso"
        app:strokeWidth="4dp" />


    <!-- Contenitore per i dati dell'utente-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDatiUtente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/Blu_chiaro"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerProfiloUtente"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/llDatiUtente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvDati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dati"
                android:textColor="@color/Nero"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!--username-->
            <TextView
                android:id="@+id/tvUsernameUtente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Username:"
                android:textColor="@color/Blu"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--nome-->
            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Nome:"
                android:textColor="@color/Blu"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--cognome-->
            <TextView
                android:id="@+id/tvCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Cognome:"
                android:textColor="@color/Blu"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--email-->
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Email:"
                android:textColor="@color/Blu"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--data di nascita-->
            <TextView
                android:id="@+id/tvDataDiNascita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Data di nascita:"
                android:textColor="@color/Blu"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--Bottone per la modifica-->
            <Button
                android:id="@+id/btnModificaDati"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/Blu"
                android:layout_gravity="center"
                android:text="@string/modifica"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="25dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>